Add preload links for game assets in index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/mine.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" as="image" href="/images/mine.svg" />
+    <link rel="preload" as="image" href="/images/flag.svg" />
+    <link rel="preload" as="image" href="/images/type1.svg" />
+    <link rel="preload" as="image" href="/images/type2.svg" />
+    <link rel="preload" as="image" href="/images/type3.svg" />
+    <link rel="preload" as="image" href="/images/type4.svg" />
+    <link rel="preload" as="image" href="/images/type5.svg" />
+    <link rel="preload" as="image" href="/images/type6.svg" />
+    <link rel="preload" as="image" href="/images/type7.svg" />
+    <link rel="preload" as="image" href="/images/type8.svg" />
     <title>Free Mines</title>
   </head>
   <body>
